Fix of previous commit.
Jib does not use fatjar file to run Spring application (see
https://cloud.google.com/blog/products/application-development/using-jib-to-containerize-java-apps
and https://phauer.com/2019/no-fat-jar-in-docker-image/), so previous
commit was not valid.

The change simply supplies JVM parameters to enable access of a 3 basics
packages from unnamed package (generated by javassist).